[fix] Overflow hidden for relic description

--- a/app/assets/stylesheets/application/profile.css.scss
+++ b/app/assets/stylesheets/application/profile.css.scss
@@ -688,6 +688,11 @@ section.show.description{
     max-width: 570px;
     display: inline-block;
   }
+
+  .content {
+    overflow: hidden
+  }
+
   .content, .content p, .content span{
     line-height: 22px;
     font-size: 14px;
